monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     virtual uint64_t unlockTime() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_unlockTime(void* txInfo_ptr);
//     virtual std::string hash() const = 0;
extern ADDAPI const char* MONERO_TransactionInfo_hash(void* txInfo_ptr);
//     virtual std::time_t timestamp() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_timestamp(void* txInfo_ptr);
//     virtual std::string paymentId() const = 0;
extern ADDAPI const char* MONERO_TransactionInfo_paymentId(void* txInfo_ptr);
//     virtual const std::vector<Transfer> & transfers() const = 0;
extern ADDAPI int MONERO_TransactionInfo_transfers_count(void* txInfo_ptr);
extern ADDAPI uint64_t MONERO_TransactionInfo_transfers_amount(void* txInfo_ptr, int index);
extern ADDAPI const char* MONERO_TransactionInfo_transfers_address(void* txInfo_ptr, int address);
// };
// struct TransactionHistory
// {
//     virtual ~TransactionHistory() = 0;
//     virtual int count() const = 0;
extern ADDAPI int MONERO_TransactionHistory_count(void* txHistory_ptr);
//     virtual TransactionInfo * transaction(int index)  const = 0;
extern ADDAPI void* MONERO_TransactionHistory_transaction(void* txHistory_ptr, int index);
//     virtual TransactionInfo * transaction(const std::string &id) const = 0;
extern ADDAPI void* MONERO_TransactionHistory_transactionById(void* txHistory_ptr, const char* id);
//     virtual std::vector<TransactionInfo*> getAll() const = 0;
//     virtual void refresh() = 0;
extern ADDAPI void MONERO_TransactionHistory_refresh(void* txHistory_ptr);
//     virtual void setTxNote(const std::string &txid, const std::string &note) = 0;
extern ADDAPI void MONERO_TransactionHistory_setTxNote(void* txHistory_ptr, const char* txid, const char* note);
// };
// struct AddressBookRow {
// public:
//     AddressBookRow(std::size_t _rowId, const std::string &_address, const std::string &_paymentId, const std::string &_description):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_paymentId(_paymentId), 
//         m_description(_description) {}
 
// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_paymentId;
//     std::string m_description;
// public:
//     std::string extra;
extern ADDAPI const char* MONERO_AddressBookRow_extra(void* addressBookRow_ptr);
//     std::string getAddress() const {return m_address;} 
extern ADDAPI const char* MONERO_AddressBookRow_getAddress(void* addressBookRow_ptr);
//     std::string getDescription() const {return m_description;} 
extern ADDAPI const char* MONERO_AddressBookRow_getDescription(void* addressBookRow_ptr);
//     std::string getPaymentId() const {return m_paymentId;} 
extern ADDAPI const char* MONERO_AddressBookRow_getPaymentId(void* addressBookRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t MONERO_AddressBookRow_getRowId(void* addressBookRow_ptr);
//     };
//     virtual ~AddressBook() = 0;
//     virtual std::vector<AddressBookRow*> getAll() const = 0;
extern ADDAPI int MONERO_AddressBook_getAll_size(void* addressBook_ptr);
extern ADDAPI void* MONERO_AddressBook_getAll_byIndex(void* addressBook_ptr, int index);
//     virtual bool addRow(const std::string &dst_addr , const std::string &payment_id, const std::string &description) = 0;  
extern ADDAPI bool MONERO_AddressBook_addRow(void* addressBook_ptr, const char* dst_addr , const char* payment_id, const char* description);
//     virtual bool deleteRow(std::size_t rowId) = 0;
extern ADDAPI bool MONERO_AddressBook_deleteRow(void* addressBook_ptr, size_t rowId);
extern ADDAPI void MONERO_Wallet_setLedgerCallback(void (*sendToLedgerDevice)(unsigned char *command, unsigned int cmd_len));